@@ -3,12 +3,13 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <link rel="stylesheet" type="text/css" href="../stylesheets/style.css"/>
-<title>Xslt/Style Task</title>
+<title>XSLT Task</title>
 </head>
 
 <body>
 
-<h2><a name="style">Xslt/Style</a></h2>
+<h2><a name="style">XSLT</a></h2>
+<p><em>The name <code>style</code> is a deprecated name for the same task.</em></p>
 <h3>Description</h3>
 <p>Process a set of documents via XSLT.</p>
 <p>This is useful for building views of XML based documentation,
