@@ -69,7 +69,7 @@ can, however, be done if absolutely necessary.
   <td><b>Description</b></td>
 </tr>
 <tr>
-  <td><a href="csc.html">Csc</a></td>
+  <td><a href="csc.html">csc</a></td>
   <td>Compiles C# code</td>
 </tr>
 
@@ -94,12 +94,12 @@ can, however, be done if absolutely necessary.
 </tr>
 
 <tr>
-  <td><a href="wsdltodotnet.html">WsdlToDotnet</a></td>
+  <td><a href="wsdltodotnet.html">wsdltodotnet</a></td>
   <td>Generates .NET code (C# or VB) from a WSDL file</td>
 </tr>
 
 <tr>
-  <td><a href="importtypelib.html">ImportTypelib</a></td>
+  <td><a href="importtypelib.html">importtypelib</a></td>
   <td>Imports a COM type library into .NET</td>
 </tr>
 
