@@ -84,7 +84,6 @@
 <a href="CoreTasks/signjar.html">SignJar</a><br>
 <a href="CoreTasks/sleep.html">Sleep</a><br>
 <a href="CoreTasks/sql.html">Sql</a><br>
-<a href="CoreTasks/style.html">Style</a><br>
 <a href="CoreTasks/subant.html">Subant</a><br>
 <a href="CoreTasks/sync.html">Sync</a><br>
 <a href="CoreTasks/tar.html">Tar</a><br>
@@ -102,7 +101,7 @@
 <a href="CoreTasks/whichresource.html">WhichResource</a><br>
 <a href="CoreTasks/war.html">War</a><br>
 <a href="CoreTasks/xmlproperty.html">XmlProperty</a><br>
-<a href="CoreTasks/style.html">Xslt</a><br>
+<a href="CoreTasks/style.html">XSLT/<i>Style</i></a><br>
 <a href="CoreTasks/zip.html">Zip</a><br>
 </body>
 </html>
