@@ -19,8 +19,8 @@ package org.apache.tools.ant.taskdefs.optional;
 import org.apache.tools.ant.BuildFileTest;
 
 /**
- * Tests the style/xslt task.
- *
+ * Tests the {@link XSLTProcess} task.
+ * XXX merge with {@link StyleTest}?
  * @since Ant 1.5
  */
 public class XsltTest extends BuildFileTest {
